@@ -76,6 +76,7 @@ $url_parser_url_tokens = array(
     'https://',
     'ftp://',
     'telnet:',  // Special case -- doesn't need the slashes
+    'mailto:',  // Special case -- doesn't use the slashes
     'gopher://',
     'news://');
 
@@ -85,12 +86,18 @@ $url_parser_poss_ends = array(' ', "\n", "\r", '<', '>', ".\r", ".\n",
     ']', '[', '{', '}', "\240", ', ', '. ', ",\n", ",\r");
 
 
+/**
+ * Parses a body and converts all found URLs to clickable links.
+ *
+ * @param string body the body to process, by ref
+ * @return void
+ */
 function parseUrl (&$body) {
     global $url_parser_poss_ends, $url_parser_url_tokens;
     $start      = 0;
     $blength    = strlen($body);
 
-    while ($start != $blength) {
+    while ($start < $blength) {
         $target_token = '';
         $target_pos = $blength;
 
@@ -112,6 +119,36 @@ function parseUrl (&$body) {
             $target_pos = strlen($check_str) + $start;
         }
 
+        // rfc 2368 (mailto URL)
+        if ($target_token == 'mailto:') {    
+            $target_pos += 7;    //skip mailto:
+            $end = $blength;
+
+            $mailto = substr($body, $target_pos, $end-$target_pos);
+
+            global $MailTo_PReg_Match;
+            if ((preg_match($MailTo_PReg_Match, $mailto, $regs)) && ($regs[0] != '')) {
+                //sm_print_r($regs);
+                $mailto_before = $target_token . $regs[0];
+                $mailto_params = $regs[10];
+                if ($regs[1]) {    //if there is an email addr before '?', we need to merge it with the params
+                    $to = 'to=' . $regs[1];
+                    if (strpos($mailto_params, 'to=') > -1)    //already a 'to='
+                        $mailto_params = str_replace('to=', $to . '%2C%20', $mailto_params);
+                    else {
+                        if ($mailto_params)    //already some params, append to them
+                            $mailto_params .= '&amp;' . $to;
+                        else
+                            $mailto_params .= '?' . $to;
+                    }
+                }
+                $url_str = preg_replace(array('/to=/i', '/(?<!b)cc=/i', '/bcc=/i'), array('send_to=', 'send_to_cc=', 'send_to_bcc='), $mailto_params);
+                $comp_uri = makeComposeLink('src/compose.php' . $url_str, $mailto_before);
+                replaceBlock($body, $comp_uri, $target_pos - 7, $target_pos + strlen($regs[0]));
+                $target_pos += strlen($comp_uri) - 7;
+            }
+        }
+        else
         /* If there was a token to replace, replace it */
         if ($target_token != '') {
             /* Find the end of the URL */
